--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
-
+    strategy:
+            fail-fast: false
+            matrix:
+              language: ['javascript', 'python']
     permissions:
       # required for all workflows
       security-events: write
@@ -23,3 +26,4 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
+          
